--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,9 @@
     --secondary-font: 'Raleway',
         sans-serif;
     --primary-text-color: #212121;
+    --secondary-text-color: #757575;
     --accent-color: #2196F3;
+    --main-color: #FFFFFF;
 }
 
 .list {
@@ -26,6 +28,7 @@ body {
 
 .logo {
     font-family: var(--secondary-font);
+    font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
@@ -37,10 +40,7 @@ body {
 }
 
 .logo-footer {
-   color: #FFFFFF;
-
-
-
+   color: var(--main-color);
 }
 
 /* ---------------- header ------------------ */
@@ -50,6 +50,7 @@ body {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    color: var(--primary-text-color);
 }
 
 .menu-link:hover,
@@ -70,7 +71,7 @@ body {
 }
 
 .contacts-theme-light {
-    color: #757575;
+    color: var(--secondary-text-color);
 }
 
 
@@ -93,7 +94,7 @@ body {
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-     color: #FFFFFF;
+    color: var(--main-color);
 }
 
 .hero {
@@ -101,6 +102,7 @@ body {
 }
 
 .modal-btn {
+    font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
     display: flex;
@@ -108,7 +110,7 @@ body {
     text-align: center;
     letter-spacing: 0.06em;
     cursor: pointer;
-    color: #FFFFFF;
+    color: var(--main-color);
     background: var(--accent-color);
 }
 
@@ -121,6 +123,7 @@ body {
 /* ----------------- content ----------- */
 
 .content-title {
+    font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
@@ -132,10 +135,11 @@ body {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--secondary-text-color);
 }
 
 .section-heading {
+    font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
@@ -158,7 +162,7 @@ body {
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--secondary-text-color);
     }
     
 /* ------------ footer ------------ */
@@ -167,12 +171,16 @@ body {
     background: #2F303A;
 }
 
+.addres-list {
+    font-style: normal;
+}
+
 .street-address {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #FFFFFF;
+    color: var(--main-color);
 }
  
 .street-address:hover,
@@ -192,11 +200,12 @@ body {
 
 .portfolio-btn:hover,
 .portfolio-btn:focus {
-    color: #FFFFFF;;
+    color: var(--main-color);
     background: var(--accent-color);
 }
 
 .portfolio-title {
+    font-weight: 700;
     font-size: 18px;
     line-height: 2.0;
     letter-spacing: 0.06em;
@@ -207,5 +216,5 @@ body {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--secondary-text-color);
 }
